--- a/app/src/main/assets/test.html
+++ b/app/src/main/assets/test.html
@@ -40,6 +40,9 @@
     <button onclick="address('82446','commoncallback')">address</button>
     <br>
     <a href="http://www.jd.com">京东</a>
+    <br>
+    <br>
+    <a  style="font-size: xx-large" href="https://www.baidu.com?__statusBarStyle=white" target="_blank">url控制->新页面状态栏文字颜色变白色(window open)</a>
 
 </div>
 
